--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "dart.flutterSdkPath": "/Users/sunya/Documents/flutterProjects/core_mobile_banking/.fvm/versions/3.24.4"
+  "dart.flutterSdkPath": ".fvm/versions/3.24.4"
 }
