--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,11 @@ dependencies:
 
   # Routing
   auto_route: ^9.2.0
+
+  # Firebase
+  firebase_analytics: ^11.3.3
+  firebase_core: ^3.6.0
+
   
 dev_dependencies:
   flutter_test:
