--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   # Firebase
   firebase_analytics: ^11.3.3
   firebase_core: ^3.6.0
+  equatable: ^2.0.5
 
   
 dev_dependencies:
@@ -73,6 +74,9 @@ dev_dependencies:
   freezed: ^2.4.7
   intl_utils: ^2.8.7
 
+flutter_gen:
+  output: lib/generated/
+  
 flutter:
   uses-material-design: true
   generate: true
